more code inspection + clean up packets + adjust wing icon handling + fix server crash + made mob effect penalty use potion data (value will always be calculated with level 1, same as damage modification penalty)